<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="isNetworkSelected"
      type="Boolean" />

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.forcenetworktype.NetworkTypeItemViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/network_type_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/network_type_text_view"
      style="@style/Subtitle1ViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_item_background_solid_color"
      android:paddingStart="16dp"
      android:paddingTop="20dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@{viewModel.networkTypeString}"
      android:textColor="@color/component_color_shared_primary_dark_text_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/selected_network_tick"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="18dp"
      android:layout_marginBottom="4dp"
      android:contentDescription="@{@string/force_network_type_network_selected}"
      app:srcCompat="@drawable/ic_check_24dp"
      android:visibility="@{isNetworkSelected ? View.VISIBLE : View.GONE }"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/component_color_shared_check_icon_color" />

    <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/network_type_text_view" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
