...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/force_network_type_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/force_network_type_recycler_view"
        list="@{viewModel.networkTypeList}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/component_color_shared_screen_tertiary_background_color"
        android:clipToPadding="false"
        android:overScrollMode="never"
...
